# hsp-aidemo

./: CMakeLists.txt  README.md
include/SNPE2.13/SNPE/: PSNPE.h  SNPE.h
include/SNPE2.19/DlSystem/: DlEnums.h  DlEnums.hpp  DlError.hpp  ITensorItr.hpp  IUserBuffer.hpp  IUserBufferFactory.hpp  UserMemoryMap.hpp
include/SNPE2.19/SNPE/: SNPEBuilder.h  SNPEBuilder.hpp  SNPEUtil.h
include/gstreamer-1.0/gst/pbutils/: gstpluginsbaseversion.h
libs/: README.md
libs/opencv-4.9.0/aarch64/lib/: libopencv_calib3d.so.4.9.0  libopencv_core.so.409  libopencv_features2d.so.4.9.0  libopencv_flann.so.409  libopencv_highgui.so.4.9.0  libopencv_imgcodecs.so.4.9.0  libopencv_imgproc.so.409  libopencv_ml.so.4.9.0  libopencv_objdetect.so.409  libopencv_photo.so.4.9.0  libopencv_video.so.409  libopencv_videoio.so.409
libs/opencv-4.9.0/x86/lib/: libopencv_calib3d.so.409  libopencv_features2d.so.409  libopencv_flann.so.4.9.0  libopencv_highgui.so.409  libopencv_imgcodecs.so.409  libopencv_objdetect.so.4.9.0  libopencv_stitching.so.4.9.0  libopencv_video.so.409  libopencv_videoio.so.409
models/: README.md  det_500m_quantized.dlc
scrfd/data/: README.md
scrfd/onnx/: README.md
scrfd/scripts/: create_scrfd_raws.py
src/: FaceAlign.hpp  FaceDet.cpp  FaceDet.hpp  SnpeCommLib.cpp  aiObject.cpp  aiObject.hpp  drawObject.hpp  gstObject.cpp  gstObject.hpp  main.cpp
src/core/: FaceAlign.hpp  FaceDet.cpp  FaceDet.hpp  FaceRec.cpp  FaceRec.hpp  SnpeCommLib.cpp  SnpeCommLib.hpp  qcsnpe.cpp  qcsnpe.hpp  yolonas.cpp  yolonas.h  yolonas.hpp
src/tracking/: Hungarian.cpp  Hungarian.hpp  KalmanTracker.cpp  KalmanTracker.hpp  TrackProcess.cpp  TrackProcess.hpp
